<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity"
    android:background="@android:color/holo_red_dark"
    >






    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <EditText
            android:textSize="20sp"
            android:text="@string/gggggggggggg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>






    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">


        <EditText
            android:textSize="20sp"
            android:text="@string/kkkkkk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>








    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">


        <EditText
            android:textSize="20sp"
            android:text="@string/gggggggggggg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>






    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">


        <EditText
            android:textSize="20sp"
            android:text="@string/gggggggggggg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp">


        <EditText
            android:textSize="20sp"
            android:text="@string/gggggggggggg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>






    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:gravity="center">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20sp"
            android:layout_margin="15dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/review"
            android:layout_margin="15dp"

            />

    </LinearLayout>






</RelativeLayout>