<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveActivity"
    android:background="@android:color/darker_gray"
    >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:textSize="20sp"
            android:text="@string/gggggggggggg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">


            <TextView
                android:textSize="20sp"
                android:text="@string/kkkkkk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>








        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp">


            <TextView
                android:textSize="20sp"
                android:text="@string/gggggggggggg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>






        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp">


            <TextView
                android:textSize="20sp"
                android:text="@string/gggggggggggg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>





        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp">


            <TextView
                android:textSize="20sp"
                android:text="@string/gggggggggggg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>






        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:gravity="center">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textSize="20sp"
                android:layout_margin="15dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/edit"
                android:layout_margin="15dp"

                />
        </LinearLayout>





</RelativeLayout>